feat: auto verify dev profile and use static users in e2e tests